# grouprep

./: .gitignore  LICENSE  README.md  pyproject.toml
sample_data/: md.json  schema.yaml  signed-md.jws
src/grouprep/: grsign.py  grverify.py  utils.py
